--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 body {
-    background: linear-gradient(324deg, rgb(169, 33, 222) 14%, rgba(255, 218, 27, 1) 63%, rgba(255, 255, 255, 1) 100%);
-    background-image: url('../media/backgroundHill.jpg');
+    background: radial-gradient(circle, rgba(181, 255, 255, 1) 23%, rgba(215, 174, 243, 1) 61%, rgba(255, 255, 255, 1) 100%);
     background-attachment: fixed;
     background-size: cover;
     
@@ -147,7 +146,7 @@ a.to-be-chosen:hover {
     transition: all 200ms ease-in-out;
 }
 
-/*section span.precipitation,*/ section span.humidity, section span.wind {
+section span.humidity, section span.wind {
     font-family: 'Josefin Sans', sans-serif;
 }
 
